force-app/main/default/objects/Escalation__c.object
<CustomObject>
    <description>Tracks escalations.</description>
    <label>Escalation</label>
    <nameField>
        <displayFormat>ESC-{0000000}</displayFormat>
        <label>Escalation ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escalations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Escalation_Level__c</fullName>
        <label>Escalation Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value><fullName>Level 1</fullName><default>true</default><label>Level 1</label></value>
                <value><fullName>Level 2</fullName><default>false</default><label>Level 2</label></value>
                <value><fullName>Level 3</fullName><default>false</default><label>Level 3</label></value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Assigned_Supervisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Supervisor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA (Hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Interaction</label>
        <referenceTo>Interaction__c</referenceTo>
        <relationshipLabel>Escalations</relationshipLabel>
        <relationshipName>Escalations</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>